# HaoGame

./: .gitignore  CMakeLists.txt  README.md
common/: keybinds.hpp
entities/: entity.cpp  entity.hpp
game_states/: game_state.cpp  game_state.hpp  state.cpp  state.hpp
headers/: engine.hpp  keybinds_config.hpp  protobuf_wrapper.hpp  state.hpp
proto_files/: config.proto  keybinds_config.proto  save_game.proto
src/: engine.cpp  keybinds_config.cpp  main.cpp  protobuf_wrapper.cpp  state.cpp
tests/: CMakeLists.txt
